# homebot

./: .gitignore  ARCHITECTURE.md  Cargo.toml  HW.md  LICENSE  Makefile  README.md  README_THOUGHTS.md  ROBOT_README.md  TODO.md  TODO.txt  build.rs  cfg.yaml  home  home.sh  variables
00_preparations/: 00A_Arduino.md  README.md
01_base_hw/: Cargo.toml
01_pythontest/: README.md  test.py
01_rusttest/: Cargo.toml
02_serial_py/: test.py
02_serial_rs/: Cargo.toml
02_serial_rs/src/: main.rs  main.rs.old
03_arduinotest/: 02_serial.ino  README.md
03_motors_py/: optional.ino  test.py
03_motors_rs/: Cargo.toml  README.md
03_serial_py/: README.md
04_objects_rs/: Cargo.toml
10_integration/: ARCH.md  Cargo.toml  ERROR.txt  README.md  cfg.yml
10_integration/simulation/controllers/rust_controller/: rust_controller
10_integration/simulation/worlds/: .homebot_simulation_world.wbproj  .homebot_simulation_world.wbproj.mine
10_integration/src/: TODO.txt  TODO_2.txt  TODO_3.txt  TODO_TESTS.txt  aux_funcs.rs  bindings.rs  bindings_live.rs  brain.rs  env.rs  error.rs  homebot_brain_old.rs  hw.rs  hw_arduino.rs  hw_live.rs  hw_sim.rs  hw_webots.rs  input.rs  lib.rs  live_bindings.rs  live_env.rs  live_hw.rs  live_output.rs  main.rs  output_live.rs  output_sim.rs  reactionset.rs  robot.rs  sim_bindings.rs  sim_env.rs  sim_hw.rs  sim_output.rs
10_integration/src/AUX/: bindings.rs  hw.rs  hw_sim.rs.prev
99_advanced/: Cargo.toml  cfg.yaml
OLD_DOCS/: BRAINSTORM.md
homebotctl/: .gitignore  Cargo.toml  README.md  ctlcfg.yml  ctlcfg.yml.template  home  (+1 more)
src/: env.rs  (+33 more)
(+83 files in other folders)
