[package]
name = "homebot"
version = "0.0.1"
edition = "2018"

[dev-dependencies]
tempfile = "3.16.0"

[build-dependencies]
bindgen = { version = "0.63", optional = true }

[dependencies]
either = "1.15.0"
serde_yaml = "0.8.7"
serde = "*"
tokio-serial = "5.4.5"
gpio-cdev = "0.5.1"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4" 
regex = "1.7"
futures = "0.3.31"


[features]

sim = ["dep:bindgen"]
test = ["dep:bindgen"]
live = []
